--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.2.2
   flutter_rating_bar: ^4.0.1
   rate_in_stars: ^0.0.3
   # persistent_bottom_nav_bar: ^5.0.2
   curved_navigation_bar: ^1.0.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
