--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   # persistent_bottom_nav_bar: ^5.0.2
   curved_navigation_bar: ^1.0.3
   intl: ^0.19.0
+  flutter_widget_from_html: ^0.14.11
 
 dev_dependencies:
   flutter_test:
