--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   intl: ^0.19.0
   flutter_widget_from_html: ^0.14.11
+  google_maps_flutter: ^2.1.2
+  geocoding: ^2.0.4
+  geolocator: ^8.2.0
 
 dev_dependencies:
   flutter_test:
