--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=3.2.3 <4.0.0"
+  
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -46,6 +47,11 @@ dependencies:
   google_maps_flutter: ^2.1.2
   geocoding: ^2.0.4
   geolocator: ^8.2.0
+  flutter_typeahead: ^3.1.3
+  google_maps_flutter_web: ^0.3.0+2
+  #flutter_google_places: ^0.3.0
+  #flutter_google_places_hoc081098: ^1.2.0
+  
 
 dev_dependencies:
   flutter_test:
