--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,8 @@ dependencies:
   geolocator: ^8.2.0
   flutter_typeahead: ^3.1.3
   google_maps_flutter_web: ^0.3.0+2
-  #flutter_google_places: ^0.3.0
-  #flutter_google_places_hoc081098: ^1.2.0
+  flutter_google_places: ^0.3.0
+  #google_places_flutter: ^2.0.8
   
 
 dev_dependencies:
