--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.2.2
   flutter_rating_bar: ^4.0.1
@@ -43,14 +44,16 @@ dependencies:
   # persistent_bottom_nav_bar: ^5.0.2
   curved_navigation_bar: ^1.0.3
   intl: ^0.19.0
-  flutter_widget_from_html: ^0.14.11
+  #flutter_widget_from_html: ^0.14.11
   google_maps_flutter: ^2.1.2
   geocoding: ^2.0.4
   geolocator: ^8.2.0
   flutter_typeahead: ^3.1.3
+  webview_flutter: ^2.0.9
   google_maps_flutter_web: ^0.3.0+2
   flutter_google_places: ^0.3.0
   #google_places_flutter: ^2.0.8
+  
   
 
 dev_dependencies:
