--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   google_maps_flutter_web: ^0.3.0+2
   flutter_google_places: ^0.3.0
   #google_places_flutter: ^2.0.8
-  
+  add_to_cart_animation: ^2.0.3
   
 
 dev_dependencies:
