--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,16 +44,17 @@ dependencies:
   # persistent_bottom_nav_bar: ^5.0.2
   curved_navigation_bar: ^1.0.3
   intl: ^0.19.0
-  #flutter_widget_from_html: ^0.14.11
+  flutter_widget_from_html: ^0.9.1
+  webview_flutter: ^2.0.9
   google_maps_flutter: ^2.1.2
   geocoding: ^2.0.4
   geolocator: ^8.2.0
   flutter_typeahead: ^3.1.3
-  webview_flutter: ^2.0.9
+  
   google_maps_flutter_web: ^0.3.0+2
   flutter_google_places: ^0.3.0
   #google_places_flutter: ^2.0.8
-  add_to_cart_animation: ^2.0.3
+  #add_to_cart_animation: ^2.0.3
   
 
 dev_dependencies:
