--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,6 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=3.2.3 <4.0.0"
-  
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -50,12 +49,11 @@ dependencies:
   geocoding: ^2.0.4
   geolocator: ^8.2.0
   flutter_typeahead: ^3.1.3
-  
+  flutter_staggered_grid_view: ^0.7.0
   google_maps_flutter_web: ^0.3.0+2
   flutter_google_places: ^0.3.0
   #google_places_flutter: ^2.0.8
   #add_to_cart_animation: ^2.0.3
-  
 
 dev_dependencies:
   flutter_test:
