--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,8 +22,13 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+   def keystoreProperties = new Properties()
+  def keystorePropertiesFile = rootProject.file('key.properties')
+  if (keystorePropertiesFile.exists()) {       keystoreProperties.load(new FileInputStream(keystorePropertiesFile))   }
+
+
 android {
-    namespace "com.example.food_app"
+    namespace "com.nam.food_app"
     compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
@@ -45,7 +50,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.food_app"
+        applicationId "com.nam.food_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         //minSdkVersion flutter.minSdkVersion
@@ -56,13 +61,22 @@ android {
         versionName flutterVersionName
     }
 
-    buildTypes {
+    signingConfigs {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
-        }
-    }
+           keyAlias keystoreProperties['keyAlias']
+          keyPassword keystoreProperties['keyPassword']
+           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+           storePassword keystoreProperties['storePassword']
+       }
+   }
+    buildTypes {
+      release {
+         // TODO: Add your own signing config for the release build.
+         // Signing with the debug keys for now,
+         // so `flutter run --release` works. 
+           signingConfig signingConfigs.release
+      }
+   }
 }
 
 flutter {
@@ -71,4 +85,5 @@ flutter {
 
 dependencies {
     implementation "androidx.multidex:multidex:2.0.1"
+    implementation 'com.google.android.material:material:1.12.0'
 }
